--- a/frontend/src/assets/styles.css
+++ b/frontend/src/assets/styles.css
@@ -672,7 +672,7 @@
 header.masthead {
   padding-top: 10.5rem;
   padding-bottom: 6rem;
-  text-align: center;
+  text-align: left;
   color: #fff;
   background-image: url("./15.png");
   background-repeat: no-repeat;
